[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/characters/enemies/wanyudo-mini/WanyudoMiniSpawner.gd" type="Script" id=1]
[ext_resource path="res://src/characters/enemies/wanyudo-mini/wanyudo-mini-spawner.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Spawn",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="WanyudoMiniSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootPosition" type="Position2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Spawn"

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
